--- a/references/slides/quarto-IU-revealjs/template.qmd
+++ b/references/slides/quarto-IU-revealjs/template.qmd
@@ -4,19 +4,23 @@ format:
   quarto-IU-revealjs-revealjs: default
 author: First Last
 date: last-modified
-
+code-fold: true
+question: "Question 1" 
 ---
+
 
 ## Introduction
 
 *TODO* Create an example file that demonstrates the formatting and features of your format.
 
+{{< meta question >}}
 --- 
 
 ## More Information
 
 You can learn more about controlling the appearance of RevealJS output here: <https://quarto.org/docs/presentations/revealjs/>
 
+In the previous slide we can see [Graph -@fig-one]
 
 ---
 
@@ -24,7 +28,8 @@ You can learn more about controlling the appearance of RevealJS output here: <ht
 
 ```{r}
 #| echo: true 
-
+#| label: fig-one
+#| fig-cap: Concentration time profile
 library(ggplot2)
 ggplot(Theoph, aes(Time, conc)) + 
   geom_point() + 
